--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -11301,6 +11301,34 @@ body.sidebar-toggled footer.sticky-footer {
   display: flex;
     justify-content: space-between;
 }
-.left, .right {
+.banner-left{
+  display: flex;
+  align-items: center;
+    
+}
+.banner-icon {
+  margin-left: 1px;
+  margin-right: auto;
+}
+.banner-left, .banner-right {
   flex: 1;
+}
+
+
+@media screen and (max-width: 576px) {
+  
+}
+
+@media screen and (max-width: 768px) {
+  .banner-right {
+    display: none; 
+  }
+}
+
+@media screen and (max-width: 992px) {
+  
+}
+
+@media screen and (max-width: 1200px) {
+  
 }
