--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -11298,13 +11298,18 @@ body.sidebar-toggled footer.sticky-footer {
 /* BANNER */
 .banner{
   padding: 10px;
-  display: flex;
+/*   display: flex; */
     justify-content: space-between;
 }
 .banner-left{
-  display: flex;
-  align-items: center;
-    
+ /*  display: flex;
+  flex-direction: column;
+  align-items: flex-start; */
+  
+}
+
+.banner-right{
+  position: relative;
 }
 .banner-icon {
   margin-left: 1px;
@@ -11312,6 +11317,12 @@ body.sidebar-toggled footer.sticky-footer {
 }
 .banner-left, .banner-right {
   flex: 1;
+}
+.banner-img{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 
