--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -10363,10 +10363,65 @@ a:focus {
   padding-right: 4rem;
 }
 .home-content-container{
-  padding-left: 4em;
-  padding-right: 4rem;
+/*   padding-left: 4em;
+  padding-right: 4rem; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 70%; /* Optional: Adjust the height according to your layout */
+  font-size: 200%;
+  color: black;
+  width: 70%;
+  position: relative; /* Ensure the parent div is positioned */
 }
 
+.home-content-button, .car{
+  align-self: flex-end;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  i{
+    padding: 6px;
+    font-size: 80%;
+    color: white;
+    border-radius: 50%;
+    border: 4px solid var(--primary);
+    background-color: var(--primary);
+  }
+}
+.car {
+  position: absolute;
+  left: 0;
+  animation: moveRight 5s ease forwards; /* Animation to move car */
+}
+
+@keyframes moveRight {
+  from {
+      left: 0;
+  }
+  to {
+      left: calc(100% - 270px); /* Adjust the value according to your design */
+  }
+}
+
+.button-link {
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding: 0;
+  font: inherit;
+  animation: ease .5s;
+}
+
+.button-link > i:hover {
+  color: var(--primary);
+  background-color: white;
+}
 
 
 
@@ -10396,7 +10451,10 @@ a:focus {
 
 
 @media screen and (max-width: 576px) {
-  
+  .home-page-nav-bar {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -10410,7 +10468,7 @@ a:focus {
 
 @media screen and (max-width: 992px) {
   .navbar-light-home-page .navbar-nav .nav-item .nav-link {
-    font-size: 40%;
+    font-size: 50%;
     width: 100%;
   }
   .nav-message {
@@ -11456,6 +11514,11 @@ body.sidebar-toggled footer.sticky-footer {
 }
 
 .home-body {
-  background-color: rgba(245, 239, 222, 0.7); /* 0.5 is the opacity value (50%) */
+  background-color: rgba(245, 239, 222, 0.75); /* 0.5 is the opacity value (50%) */
   height: 100vh;
+}
+
+.logo{
+  width: 50%;
+  height: auto;
 }
