--- a/css/styles-1.css
+++ b/css/styles-1.css
@@ -20,7 +20,7 @@ body {
     list-style: none;
     position: relative;
     background-color: var(--color2);
-    padding: 12px 20px;
+    /* padding: 12px 20px; */
     padding-left: 50px;
     padding-right: 50px;
     color: white;
