--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -11630,7 +11630,7 @@ body.sidebar-toggled footer.sticky-footer {
 }
 
 
-.product-edit-column, .product-trash-column{
+.edit-column, .trash-column{
   text-align: center;
   width: 100px;
 }
@@ -11642,14 +11642,17 @@ body.sidebar-toggled footer.sticky-footer {
   text-decoration: none;
 }
 
-.product-edit-column a,
-    .product-trash-column a {
+.edit-column a,
+    .trash-column a {
         text-decoration: none; /* Remove underline from anchor tags */
         color: #333; /* Set icon color */
     }
 
-    .product-edit-column a:hover,
-    .product-trash-column a:hover {
+    .edit-column a:hover,
+    .trash-column a:hover {
         color: #007bff; /* Change icon color on hover */
     }
 
+.employee-add-button{
+  margin-bottom: 10px !important;
+}
