home page edits

--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -10552,6 +10552,12 @@ a:focus {
       font-size: 20px;
     }
 
+    .home-content-button{
+      .car{
+        width: 50%;
+      }
+    }
+
 
   }
 
