--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -10735,7 +10735,7 @@ a:focus {
 
 .sidebar .nav-item .collapse .collapse-inner .collapse-item:hover,
 .sidebar .nav-item .collapsing .collapse-inner .collapse-item:hover {
-  background-color: #eaecf4;
+  background-color: #fbd5d5;
 }
 
 .sidebar .nav-item .collapse .collapse-inner .collapse-item:active,
@@ -10745,7 +10745,7 @@ a:focus {
 
 .sidebar .nav-item .collapse .collapse-inner .collapse-item.active,
 .sidebar .nav-item .collapsing .collapse-inner .collapse-item.active {
-  color: #4e73df;
+  color: var(--primary);
   font-weight: 700;
 }
 
