--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -10281,8 +10281,8 @@ a:focus {
 }
 
 .topbar .dropdown-list .dropdown-header {
-  background-color: #4e73df;
-  border: 1px solid #4e73df;
+  background-color: #911C1C;
+  border: 1px solid #911C1C;
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   color: #fff;
