transaction and reports vice-versa

--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -11821,7 +11821,7 @@ button.centered-button {
   animation: appear 1s ease forwards;
   animation-delay: 3s;
 }
-.logo {
+.logo2 {
   animation: slideRight 2s ease forwards;
 }
 
